Cleaned up autoboxing and use of finalize()